# abilities

./: .gitignore  README.md  setup.cfg
abilities/: abilities.py  cyberpunk_2077.py  disco_elysium.py  dungeons_and_dragons.py  main.py  simple_term_menu.py
