[metadata]
name = abilities
version = 0.3
author = Stratos Kovalkov Papadoudis (Trent Hawkins)
author_email = spcom1024@gmail.com
description = Display possible score palettes for a particular RPG setup.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://https://github.com/TrentHawkins/Abilities
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Games/Entertainment :: Role-Playing

[options]
packages = find:
python_requires = >=3.9
